[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/starfield1.png" type="Texture" id=1]
[ext_resource path="res://assets/starfield2.png" type="Texture" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/hack_dynamic_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/main.gd" type="Script" id=5]
[ext_resource path="res://scenes/main_menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/in_game_menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/ParallaxBackground.gd" type="Script" id=8]

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 8 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 1024, 1024 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 4096, 2048 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 1024 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 4096, 2048 )

[node name="ScenarioEventTimer" type="Timer" parent="."]

[node name="GameResultLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionResultTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="MainMenu" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Player" parent="." instance=ExtResource( 3 )]
visible = false
gravity = 0.0

[node name="GameMenu" parent="." instance=ExtResource( 7 )]
visible = false

[node name="PewPewBullet" parent="." instance_placeholder="res://scenes/bullet.tscn"]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="timeout" from="ScenarioEventTimer" to="." method="_on_ScenarioTimer_timeout"]
[connection signal="timeout" from="ScenarioEventTimer" to="." method="_on_ScenarioEventTimer_timeout"]
[connection signal="timeout" from="MissionResultTimer" to="." method="_on_MissionResultTimer_timeout"]
